--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -1,14 +1,23 @@
-@import "colors.css";
+@define-color bg alpha(#000000, 0.8);
+@define-color dark0 #282828;
+@define-color dark1 #3c3836;
+@define-color dark2 #3c3836;
+@define-color dark3 #665c54;
+@define-color dark4 #7c6f64;
+@define-color light0 #fbf1c7;
+@define-color light1 #ebdbb2;
+@define-color light2 #d5c4a1;
+@define-color light3 #bdae93;
+@define-color light4 #a89984;
+@define-color neutral-red #cc241d;
+@define-color neutral-yellow #d79921;
 
 * {
-  /* `otf-font-awesome` is required to be installed for icons */
   border: none;
   border-radius: 0;
   font-family: FiraCode Nerd Font;
   font-size: 14px;
 }
-
-/* ------------------------------------------------------------ */
 
 window#waybar {
   background-color: @bg;
@@ -28,219 +37,9 @@ tooltip label {
   color: @light2;
 }
 
-/* ------------------------------------------------------------ */
-
-/* button { */
-/*   border: none; */
-/*   border-radius: 0; */
-/* } */
-
-/* ------------------------------------------------------------ */
-
-/* TODO */
-/* #mode { */
-/*   background-color: #64727d; */
-/*   box-shadow: inset 0 -3px #ffffff; */
-/* } */
-
-/* ------------------------------------------------------------ */
-
-/* #clock { */
-/*   background-color: #64727d; */
-/* } */
-
-/* ------------------------------------------------------------ */
-
-/* #power-profiles-daemon { */
-/*   padding-right: 15px; */
-/* } */
-
-/* #power-profiles-daemon.performance { */
-/*   background-color: #f53c3c; */
-/*   color: #ffffff; */
-/* } */
-
-/* #power-profiles-daemon.balanced { */
-/*   background-color: #2980b9; */
-/*   color: #ffffff; */
-/* } */
-
-/* #power-profiles-daemon.power-saver { */
-/*   background-color: #2ecc71; */
-/*   color: #000000; */
-/* } */
-
-/* ------------------------------------------------------------ */
-
-/* label:focus { */
-/*   background-color: #000000; */
-/* } */
-
-/* ------------------------------------------------------------ */
-
-/* #cpu { */
-/*   background-color: #2ecc71; */
-/*   color: #000000; */
-/* } */
-
-/* ------------------------------------------------------------ */
-
-/* #memory { */
-/*   background-color: #9b59b6; */
-/* } */
-
-/* ------------------------------------------------------------ */
-
-/* #disk { */
-/*   background-color: #964b00; */
-/* } */
-
-/* ------------------------------------------------------------ */
-
-/* #backlight { */
-/*   background-color: #90b1b1; */
-/* } */
-
-/* ------------------------------------------------------------ */
-
-/* #network { */
-/*   background-color: #2980b9; */
-/* } */
-
-/* #network.disconnected { */
-/*   background-color: #f53c3c; */
-/* } */
-
-/* ------------------------------------------------------------ */
-
-/* #wireplumber { */
-/*   background-color: #fff0f5; */
-/*   color: #000000; */
-/* } */
-
-/* #wireplumber.muted { */
-/*   background-color: #f53c3c; */
-/* } */
-
-/* ------------------------------------------------------------ */
-
-/* #custom-media { */
-/*   background-color: #66cc99; */
-/*   color: #2a5c45; */
-/*   min-width: 100px; */
-/* } */
-
-/* #custom-media.custom-spotify { */
-/*   background-color: #66cc99; */
-/* } */
-
-/* #custom-media.custom-vlc { */
-/*   background-color: #ffa000; */
-/* } */
-
-/* ------------------------------------------------------------ */
-
-/* #temperature { */
-/*   background-color: #f0932b; */
-/* } */
-
-/* #temperature.critical { */
-/*   background-color: #eb4d4b; */
-/* } */
-
-/* ------------------------------------------------------------ */
-
-/* #tray { */
-/*   background-color: #2980b9; */
-/* } */
-
-/* #tray > .passive { */
-/*   -gtk-icon-effect: dim; */
-/* } */
-
-/* #tray > .needs-attention { */
-/*   -gtk-icon-effect: highlight; */
-/*   background-color: #eb4d4b; */
-/* } */
-
-/* ------------------------------------------------------------ */
-
-/* #idle_inhibitor { */
-/*   background-color: #2d3436; */
-/* } */
-
-/* #idle_inhibitor.activated { */
-/*   background-color: #ecf0f1; */
-/*   color: #2d3436; */
-/* } */
-
-/* ------------------------------------------------------------ */
-
-/* #language { */
-/*   background: #00b093; */
-/*   color: #740864; */
-/*   padding: 0 5px; */
-/*   margin: 0 5px; */
-/*   min-width: 16px; */
-/* } */
-
-/* ------------------------------------------------------------ */
-
-/* #keyboard-state { */
-/*   background: #97e1ad; */
-/*   color: #000000; */
-/*   padding: 0 0px; */
-/*   margin: 0 5px; */
-/*   min-width: 16px; */
-/* } */
-
-/* #keyboard-state > label { */
-/*   padding: 0 5px; */
-/* } */
-
-/* #keyboard-state > label.locked { */
-/*   background: rgba(0, 0, 0, 0.2); */
-/* } */
-
-/* ------------------------------------------------------------ */
-
-/* #scratchpad { */
-/*   background: rgba(0, 0, 0, 0.2); */
-/* } */
-
-/* #scratchpad.empty { */
-/*   background-color: transparent; */
-/* } */
-
-/* ------------------------------------------------------------ */
-
-/* #privacy { */
-/*   padding: 0; */
-/* } */
-
-/* #privacy-item { */
-/*   padding: 0 5px; */
-/*   color: white; */
-/* } */
-
-/* #privacy-item.screenshare { */
-/*   background-color: #cf5700; */
-/* } */
-
-/* #privacy-item.audio-in { */
-/*   background-color: #1ca000; */
-/* } */
-
-/* #privacy-item.audio-out { */
-/*   background-color: #0069d4; */
-/* } */
-
-@import "modules/time.css";
 @import "modules/workspaces.css";
-@import "modules/pulseaudio.css";
 @import "modules/battery.css";
 @import "modules/language.css";
 @import "modules/tray.css";
 @import "modules/custom/mpd.css";
-@import "modules/custom/date.css";
-@import "modules/custom/jdate.css";
+@import "modules/custom/dunst-status.css";
